--- a/index.html
+++ b/index.html
@@ -171,8 +171,8 @@
             doc.line(20, 35, 190, 35);
             doc.setFontSize(10);
             doc.setTextColor(107, 114, 128); // Gray-500
-            doc.text('No.56/80, Medavakkam Main Road,', 105, 40, { align: 'center' });
-            doc.text('Keelkattalai, Chennai-600117 | GST: 33BCMPA5207N1ZN | Ph: 9962835944 | support@eyetechsecurities.in', 105, 45, { align: 'center' });
+            doc.text('No.56/80, Medavakkam Main Road, 'Keelkattalai, Chennai-600117', 105, 40, { align: 'center' });
+            doc.text('GST: 33BCMPA5207N1ZN | Ph: 9962835944 | support@eyetechsecurities.in', 105, 45, { align: 'center' });
 
             // AMC Number and Date
             const today = new Date();
@@ -314,8 +314,8 @@
                     doc.line(20, 35, 190, 35);
                     doc.setFontSize(10);
                     doc.setTextColor(107, 114, 128);
-                    doc.text('No.56/80, Medavakkam Main Road,', 105, 40, { align: 'center' });
-                    doc.text('Keelkattalai, Chennai-600117 | GST: 33BCMPA5207N1ZN | Ph: 9962835944 | support@eyetechsecurities.in', 105, 45, { align: 'center' });
+                    doc.text('No.56/80, Medavakkam Main Road,Keelkattalai, Chennai-600117', 105, 40, { align: 'center' });
+                    doc.text('GST: 33BCMPA5207N1ZN | Ph: 9962835944 | support@eyetechsecurities.in', 105, 45, { align: 'center' });
                 }
                 doc.text(lines, 20, currentY);
                 currentY += lines.length * 8;
@@ -337,7 +337,7 @@
                 doc.line(20, 35, 190, 35);
                 doc.setFontSize(10);
                 doc.setTextColor(107, 114, 128);
-                doc.text('No.56/80, Medavakkam Main Road,', 105, 40, { align: 'center' });
+                doc.text('No.56/80, Medavakkam Main Road,Keelkattalai, Chennai-600117', 105, 40, { align: 'center' });
                 doc.text('Keelkattalai, Chennai-600117 | GST: 33BCMPA5207N1ZN | Ph: 9962835944 | support@eyetechsecurities.in', 105, 45, { align: 'center' });
             }
             doc.setFontSize(14);
