--- a/index.html
+++ b/index.html
@@ -84,6 +84,9 @@
                     <label for="customer-address" class="block text-sm font-medium text-gray-700">Customer Address</label>
                     <input type="text" id="customer-address" class="input-field" required>
 
+                    <label for="contact-person" class="block text-sm font-medium text-gray-700">Contact Person</label>
+                    <input type="text" id="contact-person" class="input-field" required>
+
                     <label for="customer-contact" class="block text-sm font-medium text-gray-700">Customer Contact Number</label>
                     <input type="text" id="customer-contact" class="input-field" required>
 
@@ -159,46 +162,53 @@
             doc.text('Eye Tech Securities', 105, 20, { align: 'center' });
             doc.setFontSize(16);
             doc.text('Annual Maintenance Contract (AMC) Agreement', 105, 30, { align: 'center' });
-            doc.setDrawColor(37, 99, 235); // Blue-600
-            doc.setLineWidth(0.5);
-            doc.line(20, 35, 190, 35);
             doc.setFontSize(10);
             doc.setTextColor(107, 114, 128); // Gray-500
             doc.text('No.56/80, Medavakkam Main Road, Keelkattalai, Chennai-600117', 105, 40, { align: 'center' });
             doc.text('GST: 33BCMPA5207N1ZN | Ph: 9962835944 | support@eyetechsecurities.in', 105, 45, { align: 'center' });
+            doc.setDrawColor(37, 99, 235); // Blue-600
+            doc.setLineWidth(0.5);
+            doc.line(20, 50, 190, 50);
 
             // AMC Number and Date
             const today = new Date(2025, 7, 17); // August 17, 2025
-            today.setHours(12, 48, 0, 0); // Set to 12:48 PM IST
+            today.setHours(13, 11, 0, 0); // Set to 01:11 PM IST
             const year = today.getFullYear();
             const randomSuffix = Math.floor(Math.random() * 900) + 100;
             const amcNumber = `ETS-AMC-${year}-${randomSuffix.toString().padStart(3, '0')}`;
             const amcDate = today.toLocaleString('en-IN', { weekday: 'long', year: 'numeric', month: 'long', day: 'numeric', hour: '2-digit', minute: '2-digit', hour12: true });
+            const validUntil = new Date(today);
+            validUntil.setFullYear(validUntil.getFullYear() + parseInt(document.getElementById('contract-period').value));
+            const validUntilDate = validUntil.toLocaleDateString('en-IN', { year: 'numeric', month: 'numeric', day: 'numeric' });
 
             doc.setFontSize(12);
             doc.setFont('helvetica', 'normal');
             doc.setTextColor(55, 65, 81); // Gray-700
             doc.text(`AMC Number: ${amcNumber}`, 20, 60);
-            doc.text(`AMC Date: ${amcDate} IST`, 20, 68);
+            doc.text(`Total Amount: Rs. ${rows.length > 0 ? (parseFloat(document.querySelectorAll('.particular-row input[placeholder="Amount (Rs.)"]')[0].value) || 0).toFixed(2) : '0.00'}`, 20, 68);
+            doc.text(`AMC Date: ${amcDate} IST`, 20, 76);
+            doc.text(`Valid Until: ${validUntilDate}`, 20, 84);
 
             // Customer Details
             doc.setFontSize(14);
             doc.setFont('helvetica', 'bold');
-            doc.text('Customer Details', 20, 85);
+            doc.text('Customer Details', 20, 100);
             doc.setLineWidth(0.2);
-            doc.line(20, 87, 60, 87);
+            doc.line(20, 102, 60, 102);
             doc.setFontSize(12);
             doc.setFont('helvetica', 'normal');
             const customerName = document.getElementById('customer-name').value;
             const customerAddress = document.getElementById('customer-address').value;
+            const contactPerson = document.getElementById('contact-person').value;
             const customerContact = document.getElementById('customer-contact').value;
             const customerEmail = document.getElementById('customer-email').value;
             const customerGST = document.getElementById('customer-gst').value;
-            doc.text(`Name: ${customerName}`, 20, 95);
-            doc.text(`Address: ${customerAddress}`, 20, 103);
-            doc.text(`Contact: ${customerContact}`, 20, 111);
-            doc.text(`Email: ${customerEmail}`, 20, 119);
-            let gstY = 127;
+            doc.text(`Name: ${customerName}`, 20, 110);
+            doc.text(`Address: ${customerAddress}`, 20, 118);
+            doc.text(`Contact Person: ${contactPerson}`, 20, 126);
+            doc.text(`Phone: ${customerContact}`, 20, 134);
+            doc.text(`Email: ${customerEmail}`, 20, 142);
+            let gstY = 150;
             if (customerGST) {
                 doc.text(`GST: ${customerGST}`, 20, gstY);
                 gstY += 8;
@@ -235,26 +245,20 @@
             if (particulars.length > 0) {
                 doc.setFontSize(14);
                 doc.setFont('helvetica', 'bold');
-                doc.text('Particulars', 20, gstY + 35);
-                doc.line(20, gstY + 37, 50, gstY + 37);
+                doc.text('Equipment Covered', 20, gstY + 35);
+                doc.line(20, gstY + 37, 70, gstY + 37);
                 doc.autoTable({
                     startY: gstY + 45,
-                    head: [['Item', 'Maintenance Visits', 'Breakdown Visits', 'Amount (Rs.)']],
-                    body: [...particulars, ['', '', 'Total:', `Rs.${totalAmount.toFixed(2)}`]],
+                    head: [['S.No', 'Equipment Type', 'Maintenance Visits', 'Breakdown Visits']],
+                    body: particulars.map((item, index) => [index + 1, item[0], item[1], item[2]]),
                     theme: 'grid',
                     styles: { fontSize: 10, cellPadding: 4, textColor: [55, 65, 81] },
                     headStyles: { fillColor: [37, 99, 235], textColor: [255, 255, 255], fontStyle: 'bold' },
                     columnStyles: {
-                        0: { cellWidth: 60 },
-                        1: { cellWidth: 40 },
+                        0: { cellWidth: 20 },
+                        1: { cellWidth: 60 },
                         2: { cellWidth: 40 },
                         3: { cellWidth: 40 }
-                    },
-                    footStyles: { fillColor: [241, 245, 249], textColor: [31, 41, 55], fontStyle: 'bold' },
-                    didParseCell: (data) => {
-                        if (data.row.index === particulars.length && data.column.index === 2) {
-                            data.cell.text = ['Total:'];
-                        }
                     }
                 });
             }
@@ -306,19 +310,19 @@
                     doc.text('Eye Tech Securities', 105, 20, { align: 'center' });
                     doc.setFontSize(16);
                     doc.text('Annual Maintenance Contract (AMC) Agreement', 105, 30, { align: 'center' });
-                    doc.setDrawColor(37, 99, 235);
-                    doc.setLineWidth(0.5);
-                    doc.line(20, 35, 190, 35);
                     doc.setFontSize(10);
                     doc.setTextColor(107, 114, 128);
                     doc.text('No.56/80, Medavakkam Main Road, Keelkattalai, Chennai-600117', 105, 40, { align: 'center' });
                     doc.text('GST: 33BCMPA5207N1ZN | Ph: 9962835944 | support@eyetechsecurities.in', 105, 45, { align: 'center' });
+                    doc.setDrawColor(37, 99, 235);
+                    doc.setLineWidth(0.5);
+                    doc.line(20, 50, 190, 50);
                 }
                 doc.text(lines, 20, currentY);
                 currentY += lines.length * 7; // Reduced line spacing to fit in 2 pages
             });
 
-            // Signatures (customized as per PDF)
+            // Signatures (customized as per new specification)
             if (currentY + 50 > 280 - 20) {
                 doc.addPage();
                 currentY = 50;
@@ -329,23 +333,29 @@
                 doc.text('Eye Tech Securities', 105, 20, { align: 'center' });
                 doc.setFontSize(16);
                 doc.text('Annual Maintenance Contract (AMC) Agreement', 105, 30, { align: 'center' });
-                doc.setDrawColor(37, 99, 235);
-                doc.setLineWidth(0.5);
-                doc.line(20, 35, 190, 35);
                 doc.setFontSize(10);
                 doc.setTextColor(107, 114, 128);
                 doc.text('No.56/80, Medavakkam Main Road, Keelkattalai, Chennai-600117', 105, 40, { align: 'center' });
                 doc.text('GST: 33BCMPA5207N1ZN | Ph: 9962835944 | support@eyetechsecurities.in', 105, 45, { align: 'center' });
+                doc.setDrawColor(37, 99, 235);
+                doc.setLineWidth(0.5);
+                doc.line(20, 50, 190, 50);
             }
             doc.setFontSize(12);
-            doc.text('Customer Signature', 20, currentY);
-            doc.text('Eye Tech Securities', 120, currentY);
+            doc.text('Customer', 20, currentY);
+            doc.text('Service Provider', 120, currentY);
+            currentY += 10;
+            doc.text('"Space for Signature"', 20, currentY);
+            doc.text('"Space for Signature"', 120, currentY);
             currentY += 15;
-            doc.text(`Name: ${customerName || '_______________________'}`, 20, currentY);
+            doc.text(`${contactPerson || '_______________________'}`, 20, currentY);
             doc.text('Authorized Signatory', 120, currentY);
-            currentY += 15;
-            doc.text('Date: _______________________', 20, currentY);
-            doc.text(`Date: ${amcDate.split(', ')[1]}`, 120, currentY);
+            currentY += 10;
+            doc.text(`${customerName || '_______________________'}`, 20, currentY);
+            doc.text('Eye Tech Securities', 120, currentY);
+            currentY += 10;
+            doc.text(`${amcDate.split(', ')[1]}`, 20, currentY);
+            doc.text(`${amcDate.split(', ')[1]}`, 120, currentY);
 
             // Footer (adjusted to avoid overlap)
             doc.setFontSize(9); // Reduced font size to prevent overlap
